Update mypy configuration to check against polars
This updates our mypy configuration to follow imports for polars. This
will help catch issues like
https://github.com/rapidsai/cudf/pull/18797/files/981a25b7fa7968395958b9fae32c71bc3f548eda#r2089470041,
which slipped through because by not following imports any types from
polars are considered Any.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ exclude = [
 module = ["cudf_polars.*"]
 disallow_untyped_defs = true
 
+[[tool.mypy.overrides]]
+module = ["polars.*"]
+# override the global "skip" above so that types from polars
+# aren't skipped and assumed to be `Any`.
+follow_imports = "normal"
+
 [tool.codespell]
 # note: pre-commit passes explicit lists of files here, which this skip file list doesn't override -
 # this is only to allow you to run codespell interactively
