--- a/python/cudf/udf_cpp/CMakeLists.txt
+++ b/python/cudf/udf_cpp/CMakeLists.txt
@@ -46,7 +46,7 @@ message(STATUS "NRT_INCLUDE_DIR: ${NRT_INCLUDE_DIR}")
 include(${rapids-cmake-dir}/cpm/cccl.cmake)
 rapids_cpm_cccl(BUILD_EXPORT_SET udf-exports INSTALL_EXPORT_SET udf-exports)
 
-add_library(cudf_strings_udf SHARED strings/src/strings/udf/udf_apis.cu)
+add_library(cudf_strings_udshf SHARED strings/src/strings/udf/udf_apis.cu)
 target_include_directories(
   cudf_strings_udf PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/strings/include>"
                           "${NRT_INCLUDE_DIR}"
@@ -65,7 +65,7 @@ set_target_properties(
 )
 
 set(UDF_CXX_FLAGS)
-set(UDF_CUDA_FLAGS --expt-extended-lambda --expt-relaxed-constexpr -g -G)
+set(UDF_CUDA_FLAGS --expt-extended-lambda --expt-relaxed-constexpr)
 target_compile_options(
   cudf_strings_udf PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${UDF_CXX_FLAGS}>"
                            "$<$<COMPILE_LANGUAGE:CUDA>:${UDF_CUDA_FLAGS}>"
@@ -74,7 +74,7 @@ target_link_libraries(cudf_strings_udf PUBLIC cudf::cudf)
 install(TARGETS cudf_strings_udf DESTINATION ./cudf/_lib/)
 
 # Create the shim library for each architecture.
-set(SHIM_CUDA_FLAGS --expt-relaxed-constexpr -rdc=true --expt-extended-lambda -g -G)
+set(SHIM_CUDA_FLAGS --expt-relaxed-constexpr -rdc=true --expt-extended-lambda)
 
 # always build a default PTX file in case RAPIDS_NO_INITIALIZE is set and the device cc can't be
 # safely queried through a context
