--- a/python/cudf/udf_cpp/CMakeLists.txt
+++ b/python/cudf/udf_cpp/CMakeLists.txt
@@ -41,12 +41,10 @@ if(${NRT_RESULT})
   )
 endif()
 
-message(STATUS "NRT_INCLUDE_DIR: ${NRT_INCLUDE_DIR}")
-
 include(${rapids-cmake-dir}/cpm/cccl.cmake)
 rapids_cpm_cccl(BUILD_EXPORT_SET udf-exports INSTALL_EXPORT_SET udf-exports)
 
-add_library(cudf_strings_udshf SHARED strings/src/strings/udf/udf_apis.cu)
+add_library(cudf_strings_udf SHARED strings/src/strings/udf/udf_apis.cu)
 target_include_directories(
   cudf_strings_udf PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/strings/include>"
                           "${NRT_INCLUDE_DIR}"
@@ -89,27 +87,6 @@ foreach(arch IN LISTS CMAKE_CUDA_ARCHITECTURES)
   set(tgt shim_${arch})
 
   add_library(${tgt} OBJECT shim.cu)
-
-  set_target_properties(${tgt} PROPERTIES CUDA_ARCHITECTURES ${arch} CUDA_PTX_COMPILATION ON)
-
-  target_include_directories(
-    ${tgt} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/strings/include>"
-                  "${NRT_INCLUDE_DIR}"
-  )
-  target_compile_options(${tgt} PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${SHIM_CUDA_FLAGS}>")
-  target_link_libraries(${tgt} PUBLIC cudf::cudf)
-
-  install(
-    FILES $<TARGET_OBJECTS:${tgt}>
-    DESTINATION cudf/core/udf/
-    RENAME ${tgt}.ptx
-  )
-endforeach()
-
-foreach(arch IN LISTS CMAKE_CUDA_ARCHITECTURES)
-  set(tgt udf_apis_${arch})
-
-  add_library(${tgt} OBJECT strings/src/strings/udf/udf_apis.cu)
 
   set_target_properties(${tgt} PROPERTIES CUDA_ARCHITECTURES ${arch} CUDA_PTX_COMPILATION ON)
 
