--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1106,6 +1106,7 @@ if(CUDF_BUILD_TESTUTIL)
               $<INSTALL_INTERFACE:src/cudftestutil/utilities/tdigest_utilities.cu>
   )
   target_link_libraries(cudftestutil_impl INTERFACE cudf::cudftestutil)
+  target_compile_features(cudftestutil_impl INTERFACE cxx_std_20)
 
   # Base library for linking to cudf::cudftestutil, Note that targets should not directly link to
   # cudf::cudftestutil_impl and should instead link to an OBJECT library that contains the compiled
