Allow Narwhals CI job to fail without blocking PR merges

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -376,6 +376,7 @@ jobs:
       date: ${{ inputs.date }}
       sha: ${{ inputs.sha }}
       node_type: "gpu-l4-latest-1"
+      continue-on-error: true
       container_image: "rapidsai/ci-conda:latest"
       script: ci/test_narwhals.sh
   spark-rapids-jni:
