--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -838,6 +838,7 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - rapids-dask-dependency==25.8.*,>=0.0.0a0
+          - rapidsmpf==25.8.*,>=0.0.0a0
   run_dask_cudf:
     common:
       - output_types: [conda, requirements, pyproject]
