--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -511,7 +511,7 @@ add_library(
   src/io/comp/nvcomp_adapter.cpp
   src/io/comp/nvcomp_adapter.cu
   src/io/comp/snap.cu
-  src/io/comp/uncomp.cpp
+  src/io/comp/decompression.cpp
   src/io/comp/unsnap.cu
   src/io/csv/csv_gpu.cu
   src/io/csv/durations.cu
