--- a/conda/environments/all_cuda-128_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-128_arch-x86_64.yaml
@@ -74,12 +74,12 @@ dependencies:
 - pydata-sphinx-theme>=0.15.4
 - pynvjitlink>=0.0.0a0
 - pynvml>=12.0.0,<13.0.0a0
+- pytest
 - pytest-benchmark
 - pytest-cases>=3.8.2
 - pytest-cov
 - pytest-rerunfailures
 - pytest-xdist
-- pytest<8
 - python-confluent-kafka>=2.8.0,<2.9.0a0
 - python-xxhash
 - python>=3.10,<3.14
