--- a/python/cudf_polars/pyproject.toml
+++ b/python/cudf_polars/pyproject.toml
@@ -82,6 +82,7 @@ exclude_also = [
 omit = [
   "cudf_polars/testing/plugin.py",
   "cudf_polars/experimental/benchmarks/pdsh.py",
+  "cudf_polars/experimental/benchmarks/pdsds.py",
   "cudf_polars/experimental/benchmarks/utils.py",
   "cudf_polars/experimental/spilling.py",
   ]
