tests(cudf-polars): ignore UserWarning about port fallback

--- a/python/cudf_polars/pyproject.toml
+++ b/python/cudf_polars/pyproject.toml
@@ -67,7 +67,8 @@ max_allowed_size_compressed = '75M'
 addopts = "--tb=native --strict-config --strict-markers"
 empty_parameter_set_mark = "fail_at_collect"
 filterwarnings = [
-  "error",
+    "error",
+    "ignore:Port .* is already in use.:UserWarning",
 ]
 xfail_strict = true
 
