tests(custreamz): ignore `module-not-measured` warnings from pytest-cov

--- a/python/custreamz/pyproject.toml
+++ b/python/custreamz/pyproject.toml
@@ -104,3 +104,6 @@ filterwarnings = [
     "ignore:FNV hashing is not implemented in Numba.*:UserWarning"
 ]
 xfail_strict = true
+
+[tool.coverage.run]
+disable_warnings = ["module-not-measured"]
