--- a/python/custreamz/pyproject.toml
+++ b/python/custreamz/pyproject.toml
@@ -101,7 +101,9 @@ filterwarnings = [
     "ignore:pkg_resources is deprecated as an API:UserWarning:streamz",
     "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
     # Ignore numba PEP 456 warning specific to arm machines
-    "ignore:FNV hashing is not implemented in Numba.*:UserWarning"
+    "ignore:FNV hashing is not implemented in Numba.*:UserWarning",
+    "ignore:Benchmarks are automatically disabled because xdist plugin is active*:pytest_benchmark.logger.PytestBenchmarkWarning",
+    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
 ]
 xfail_strict = true
 
