--- a/python/cudf/pyproject.toml
+++ b/python/cudf/pyproject.toml
@@ -19,9 +19,8 @@ license = { text = "Apache-2.0" }
 requires-python = ">=3.10"
 dependencies = [
     "cachetools",
-    "cubinlinker",
-    "cuda-python>=11.8.5,<12.0a0",
-    "cupy-cuda11x>=12.0.0",
+    "cuda-python>=12.6.2,<13.0a0",
+    "cupy-cuda12x>=12.0.0",
     "fsspec>=0.6.0",
     "libcudf==25.8.*,>=0.0.0a0",
     "numba-cuda>=0.11.0,<0.12.0a0",
@@ -30,10 +29,10 @@ dependencies = [
     "nvtx>=0.2.1",
     "packaging",
     "pandas>=2.0,<2.2.4dev0",
-    "ptxcompiler",
     "pyarrow>=14.0.0,<20.0.0a0,!=17.0.0; platform_machine=='aarch64'",
     "pyarrow>=14.0.0,<20.0.0a0; platform_machine=='x86_64'",
     "pylibcudf==25.8.*,>=0.0.0a0",
+    "pynvjitlink>=0.0.0a0",
     "rich",
     "rmm==25.8.*,>=0.0.0a0",
     "typing_extensions>=4.0.0",
