--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -269,7 +269,7 @@ ConfigureTest(
 )
 
 # ##################################################################################################
-# * unary transform tests -------------------------------------------------------------------------
+# * transform tests -------------------------------------------------------------------------
 ConfigureTest(
   TRANSFORM_TEST
   transform/integration/unary_transform_test.cpp
@@ -280,6 +280,10 @@ ConfigureTest(
   transform/segmented_row_bit_count_test.cu
   transform/one_hot_encode_tests.cpp
 )
+
+# ##################################################################################################
+# * filter tests -------------------------------------------------------------------------
+ConfigureTest(FILTER_TEST filter/filter_test.cpp)
 
 # ##################################################################################################
 # * interop tests -------------------------------------------------------------------------
