Require pytorch-gpu for test
https://github.com/rapidsai/cudf/actions/runs/15725332206/job/44313955863#step:11:11489
failed, possibly because our requirement for `pytorch>=2.7.0` is liable
to pick up a CPU-only version if there's a newer CPU version available
(e.g. 2.7.1) before thew GPU version becomes avaiable (e.g. 2.7.0).

These tests seem to require GPU-enabled pytorch, so we'll specify that
in the dependencies.

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -853,7 +853,7 @@ dependencies:
           - matrix:
               cuda: "12.*"
             packages:
-              - pytorch>=2.4.0
+              - pytorch-gpu>=2.4.0
           - matrix:
             packages:
   test_python_dask_cudf:
