--- a/cpp/examples/string_transforms/CMakeLists.txt
+++ b/cpp/examples/string_transforms/CMakeLists.txt
@@ -23,19 +23,19 @@ list(APPEND CUDF_CUDA_FLAGS --expt-extended-lambda --expt-relaxed-constexpr)
 add_executable(int_output int_output.cpp)
 target_compile_features(int_output PRIVATE cxx_std_20)
 target_compile_options(int_output PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${CUDF_CUDA_FLAGS}>")
-target_link_libraries(int_output PRIVATE cudf::cudf nvtx3::nvtx3-cpp)
+target_link_libraries(int_output PRIVATE cudf::cudf $<BUILD_LOCAL_INTERFACE:nvtx3::nvtx3-cpp>)
 install(TARGETS int_output DESTINATION bin/examples/libcudf)
 
 add_executable(output output.cpp)
 target_compile_features(output PRIVATE cxx_std_20)
 target_compile_options(output PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${CUDF_CUDA_FLAGS}>")
-target_link_libraries(output PRIVATE cudf::cudf nvToolsExt)
+target_link_libraries(output PRIVATE cudf::cudf $<BUILD_LOCAL_INTERFACE:nvtx3::nvtx3-cpp>)
 install(TARGETS output DESTINATION bin/examples/libcudf)
 
 add_executable(preallocated preallocated.cpp)
 target_compile_features(preallocated PRIVATE cxx_std_20)
 target_compile_options(preallocated PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${CUDF_CUDA_FLAGS}>")
-target_link_libraries(preallocated PRIVATE cudf::cudf nvToolsExt)
+target_link_libraries(preallocated PRIVATE cudf::cudf $<BUILD_LOCAL_INTERFACE:nvtx3::nvtx3-cpp>)
 install(TARGETS preallocated DESTINATION bin/examples/libcudf)
 
 install(FILES ${CMAKE_CURRENT_LIST_DIR}/info.csv DESTINATION bin/examples/libcudf)
