--- a/java/pom.xml
+++ b/java/pom.xml
@@ -358,6 +358,35 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>javadoc-jdk17</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.6.3</version>
+                        <configuration>
+                            <classifier>javadoc</classifier>
+                            <additionalJOptions>
+                                <additionalJOption>-Xdoclint:none</additionalJOption>
+                            </additionalJOptions>
+                            <source>8</source> <!-- Compatible to JDK 8 -->
+                            <!-- Set JDK 17 javadoc path -->
+                            <javadocExecutable>${env.JDK17_HOME}/bin/javadoc</javadocExecutable>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <build>
