rename files and functors to sort-radix

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -681,11 +681,11 @@ add_library(
   src/sort/faster_sort_column.cu
   src/sort/faster_stable_sort_column.cu
   src/sort/is_sorted.cu
-  src/sort/radix_sort_column.cu
   src/sort/rank.cu
   src/sort/segmented_sort.cu
-  src/sort/sort_column.cu
   src/sort/sort.cu
+  src/sort/sort_column.cu
+  src/sort/sort_radix.cu
   src/sort/stable_segmented_sort.cu
   src/sort/stable_sort_column.cu
   src/sort/stable_sort.cu
