--- a/cpp/benchmarks/CMakeLists.txt
+++ b/cpp/benchmarks/CMakeLists.txt
@@ -288,7 +288,11 @@ ConfigureNVBench(
 
 # ##################################################################################################
 # * null_mask benchmark ---------------------------------------------------------------------------
-ConfigureNVBench(NULLMASK_NVBENCH null_mask/set_null_mask.cpp)
+ConfigureNVBench(NULLMASK_NVBENCH bitmask/set_null_mask.cpp)
+
+# ##################################################################################################
+# * bitmask benchmark ---------------------------------------------------------------------------
+ConfigureNVBench(BITMASK_NVBENCH bitmask/bitmask_and.cu)
 
 # ##################################################################################################
 # * parquet writer benchmark ----------------------------------------------------------------------
