fixed transitive includes of integer utils

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -809,6 +809,7 @@ add_library(
   src/utilities/cuda.cpp
   src/utilities/cuda_memcpy.cu
   src/utilities/default_stream.cpp
+  src/utilities/grid_1d.cu
   src/utilities/host_memory.cpp
   src/utilities/host_worker_pool.cpp
   src/utilities/linked_column.cpp
