Revert "removed unrelated changes"
This reverts commit fbf25a4948c356b9285e987d79ee1a487ce55e1e.

--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -282,6 +282,10 @@ ConfigureTest(
 )
 
 # ##################################################################################################
+# * filter tests -------------------------------------------------------------------------
+ConfigureTest(FILTER_TEST filter/filter_test.cpp)
+
+# ##################################################################################################
 # * interop tests -------------------------------------------------------------------------
 ConfigureTest(
   INTEROP_TEST
