--- a/.github/workflows/pandas-tests.yaml
+++ b/.github/workflows/pandas-tests.yaml
@@ -4,12 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       branch:
+        description: |
+          Git branch the workflow run targets.
+          Required even when 'sha' is provided because it is also used for organizing artifacts.
         required: true
         type: string
       date:
+        description: "Date (YYYY-MM-DD) this run is for. Used to organize artifacts produced by nightly builds"
         required: true
         type: string
       sha:
+        description: "Full git commit SHA to check out"
         required: true
         type: string
 
