test changes to rapids-github-run-id

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -149,7 +149,7 @@ jobs:
   conda-cpp-checks:
     needs: conda-cpp-build
     secrets: inherit
-    uses: rapidsai/shared-workflows/.github/workflows/conda-cpp-post-build-checks.yaml@branch-25.08
+    uses: rapidsai/shared-workflows/.github/workflows/conda-cpp-post-build-checks.yaml@test-gha-tools
     with:
       build_type: pull-request
       enable_check_symbols: true
