Refactor Transform Utilities (#19212)
This PR splits up some of the jit-transform helper functions into a separate header to be re-usable across JIT code.
This changeset is necessary for filters (https://github.com/rapidsai/cudf/pull/19070) and other upcoming JIT-based APIs, i.e, aggregations and joins.

Authors:
  - Basit Ayantunde (https://github.com/lamarrr)

Approvers:
  - Shruti Shivakumar (https://github.com/shrshi)
  - David Wendt (https://github.com/davidwendt)
  - Nghia Truong (https://github.com/ttnghia)

URL: https://github.com/rapidsai/cudf/pull/19212

--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -269,7 +269,7 @@ ConfigureTest(
 )
 
 # ##################################################################################################
-# * unary transform tests -------------------------------------------------------------------------
+# * transform tests -------------------------------------------------------------------------
 ConfigureTest(
   TRANSFORM_TEST
   transform/integration/unary_transform_test.cpp
