--- a/cpp/examples/string_transforms/CMakeLists.txt
+++ b/cpp/examples/string_transforms/CMakeLists.txt
@@ -47,7 +47,7 @@ install(TARGETS output DESTINATION bin/examples/libcudf)
 add_executable(output_public output_public.cpp)
 target_compile_features(output_public PRIVATE cxx_std_20)
 target_compile_options(output_public PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${CUDF_CUDA_FLAGS}>")
-target_link_libraries(output_public PRIVATE cudf::cudf nvToolsExt)
+target_link_libraries(output_public PRIVATE cudf::cudf $<BUILD_LOCAL_INTERFACE:nvtx3::nvtx3-cpp>)
 install(TARGETS output_public DESTINATION bin/examples/libcudf)
 
 add_executable(preallocated preallocated.cpp)
@@ -59,7 +59,7 @@ install(TARGETS preallocated DESTINATION bin/examples/libcudf)
 add_executable(preallocated_public preallocated_public.cpp)
 target_compile_features(preallocated_public PRIVATE cxx_std_20)
 target_compile_options(preallocated_public PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:${CUDF_CUDA_FLAGS}>")
-target_link_libraries(preallocated_public PRIVATE cudf::cudf nvToolsExt)
+target_link_libraries(preallocated_public PRIVATE cudf::cudf $<BUILD_LOCAL_INTERFACE:nvtx3::nvtx3-cpp>)
 install(TARGETS preallocated_public DESTINATION bin/examples/libcudf)
 
 install(FILES ${CMAKE_CURRENT_LIST_DIR}/info.csv DESTINATION bin/examples/libcudf)
