Update snapshot repo to central.soantype.com
Signed-off-by: Peixin Li <pxLi@nyu.edu>

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -284,7 +284,7 @@
             <distributionManagement>
                 <snapshotRepository>
                     <id>ossrh</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
                 </snapshotRepository>
             </distributionManagement>
             <properties>
