Support output-type for MEDIAN/QUANTILE aggregation in cudf::reduce

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -631,6 +631,7 @@ add_library(
   src/reductions/minmax.cu
   src/reductions/nth_element.cu
   src/reductions/product.cu
+  src/reductions/quantile.cu
   src/reductions/reductions.cpp
   src/reductions/scan/rank_scan.cu
   src/reductions/scan/ewm.cu
