--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -329,11 +329,8 @@ ConfigureTest(
   PERCENT 30
 )
 ConfigureTest(
-  PARQUET_EXPERIMENTAL_TEST
-  io/parquet_experimental_reader_test.cpp
-  io/parquet_experimental_apis_test.cu
-  io/parquet_common.cpp
-  io/parquet_test.cpp
+  PARQUET_EXPERIMENTAL_TEST io/parquet_experimental_reader_test.cpp
+  io/parquet_experimental_apis_test.cu io/parquet_common.cpp io/parquet_test.cpp
   GPUS 1
   PERCENT 30
 )
