--- a/cpp/examples/interop/CMakeLists.txt
+++ b/cpp/examples/interop/CMakeLists.txt
@@ -17,6 +17,12 @@ include(../fetch_dependencies.cmake)
 include(rapids-cmake)
 rapids_cmake_build_type("Release")
 
+# For now, disable CMake's automatic module scanning for C++ files. There is an
+# sccache bug in the version RAPIDS uses in CI that causes it to handle the
+# resulting -M* flags incorrectly with gcc>=14. We can remove this once we
+# upgrade to a newer sccache version.
+set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
+
 # The Arrow CMake is currently broken if the build type is not set
 set(CMAKE_BUILD_TYPE Release)
 # No need to install Arrow libs when only the final example executable is shipped.
