benchmark axis rename ; syle check

--- a/cpp/benchmarks/CMakeLists.txt
+++ b/cpp/benchmarks/CMakeLists.txt
@@ -307,11 +307,11 @@ ConfigureNVBench(
 )
 
 # ##################################################################################################
-# * parquet experimental reader benchmark ----------------------------------------------------------------------
+# * parquet experimental reader benchmark
+# ----------------------------------------------------------------------
 ConfigureNVBench(
   PARQUET_EXPERIMENTAL_READER_NVBENCH io/parquet/experimental/parquet_dictionary_page_filter.cpp
 )
-
 
 # ##################################################################################################
 # * parquet multithread reader benchmark
