--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -719,6 +719,7 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - rapids-dask-dependency==25.8.*,>=0.0.0a0
+          - nvidia-ml-py
   run_dask_cudf:
     common:
       - output_types: [conda, requirements, pyproject]
