--- a/.github/workflows/pandas-tests.yaml
+++ b/.github/workflows/pandas-tests.yaml
@@ -24,8 +24,8 @@ jobs:
       secrets: inherit
       uses: rapidsai/shared-workflows/.github/workflows/wheels-test.yaml@branch-25.08
       with:
-        # This selects "ARCH=amd64 + the latest supported Python + CUDA".
-        matrix_filter: map(select(.ARCH == "amd64")) | group_by(.CUDA_VER|split(".")|map(tonumber)|.[0]) | map(max_by([(.PY_VER|split(".")|map(tonumber)), (.CUDA_VER|split(".")|map(tonumber))]))
+        # This selects "ARCH=amd64 + the oldest supported Python + latest supported CUDA".
+        matrix_filter: map(select(.ARCH == "amd64")) | max_by(.CUDA_VER|split(".")|map(tonumber)) | min_by(.PY_VER|split(".")|map(tonumber))
         build_type: nightly
         branch: ${{ inputs.branch }}
         date: ${{ inputs.date }}
