Add cudf::strings::find_instance API

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -749,6 +749,7 @@ add_library(
   src/strings/search/contains_multiple.cu
   src/strings/search/findall.cu
   src/strings/search/find.cu
+  src/strings/search/find_instance.cu
   src/strings/search/find_multiple.cu
   src/strings/slice.cu
   src/strings/split/partition.cu
