Run cudf-polars tests with all supported polars versions

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -708,6 +708,7 @@ dependencies:
       - output_types: [conda, requirements, pyproject]
         packages:
           - polars>=1.25,<1.32
+          - packaging
     specific:
       - output_types: [requirements, pyproject]
         matrices:
