Add new cudf::top_k API (#19303)
Adds new `cudf::top_k` API to compute the top K values for a given column.
This essentially performs a descending sort followed by a gather of the first K elements.

Reference: https://github.com/rapidsai/cudf/issues/19096

Authors:
  - David Wendt (https://github.com/davidwendt)

Approvers:
  - Muhammad Haseeb (https://github.com/mhaseeb123)
  - Yunsong Wang (https://github.com/PointKernel)

URL: https://github.com/rapidsai/cudf/pull/19303

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -692,6 +692,7 @@ add_library(
   src/sort/stable_segmented_sort.cu
   src/sort/stable_sort_column.cu
   src/sort/stable_sort.cu
+  src/sort/top_k.cu
   src/stream_compaction/apply_boolean_mask.cu
   src/stream_compaction/distinct.cu
   src/stream_compaction/distinct_count.cu
